--- a/edit-account.html
+++ b/edit-account.html
@@ -54,27 +54,23 @@
             font-weight: bold;
             margin-bottom: 4px;
         }
-        .input {
-            background-color: var(--text-input-field);
-            border: none;
-            border-radius: 8px;
-            height: 30px;
+        .value {
+            color: var(--very-light-pink);
             font-size: var(--md);
-            padding: 6px;
-            margin-bottom: 22px;
+            margin: 8px 0px 32px 0px;
         }
-        .primaryButton{
-            background-color: var(--hospital-green);
+        .secondaryButton{
+            background-color: var(--white);
             border-radius: 8px;
-            border: none;
-            color: var(--white);
+            border: 1px solid var(--hospital-green);
+            color: var(--hospital-green);
             width: 100%;
             cursor: pointer;
             font-size: var(--md);
             font-weight: bold;
             height: 50px;
         }
-        .loginButton {
+        .editButton {
             margin-top: 14px;
             margin-bottom: 30px;
         }
@@ -84,7 +80,7 @@
                 display: block;
             }
 
-            .primaryButton {
+            .secondaryButton {
                 bottom: 0;
                 position: absolute;
                 width: 300px;
@@ -100,13 +96,13 @@
             <h1 class="title">My account</h1>
             <form action="" class="form">
                 <label for="name" class="label">Name</label>
-                <input type="text" id="name" placeholder="Alexis Martínez" class="input inputName">
+                <p class="value">Camila Yokoo</p>
                 <label for="email" class="label">Email address</label>
-                <input type="email" id="email" placeholder="coort@example.com" class="input inputEmail">
+                <p class="value">camilayokoo@gmail.com</p>
                 <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="*********" class="input inputPassword">
+                <p class="value">**********</p>
 
-                <input type="submit" value="Create" class="primaryButton loginButton">
+                <input type="submit" value="Edit" class="secondaryButton editButton">
             </form>
         </div>
     </div>
