Se corrige el error en my-order que volvía muy angosto la pantalla de las ordenes. Se elimino el archivo de clase9.html. Se agrego la estructura del navbar sin ningún cudigo CSS.

--- a/my-orders.html
+++ b/my-orders.html
@@ -51,23 +51,15 @@
 
         .order {
             display: grid;
-            grid-template-columns: auto 1fr;
+            grid-template-columns: auto 1fr auto;
             gap: 16px;
             align-items: center;
-            background-color: var(--text-input-field);
-            margin-bottom: 24px;
-            border-radius: 8px;
-
+            margin-bottom: 12px;
         }
 
         .order p:nth-child(1) {
             display: flex;
             flex-direction: column;
-        }
-
-        .order p:nth-child(2) {
-            text-align: end;
-            font-weight: bold;
         }
 
         .order p span:nth-child(1) {
@@ -80,22 +72,62 @@
             color: var(--very-light-pink);
         }
 
+        .order p:nth-child(2) {
+            text-align: end;
+            font-weight: bold;
+        }
     </style>
 </head>
 
 <body>
     <div class="my-order">
-        <div class="my-order-contanier">
-            <h1 class="title">My order</h1>
+        <div class="my-order-container">
+            <h1 class="title">My orders</h1>
+
             <div class="my-order-content">
                 <div class="order">
                     <p>
-                        <span>26.01.2022</span>
+                        <span>26.01.22</span>
                         <span>6 articles</span>
                     </p>
-                    <p>$1734.00</p>
+                    <p>$560.00</p>
+                    <img src="/icons/flechita.svg" alt="flechita">
                 </div>
             </div>
+
+            <div class="my-order-content">
+                <div class="order">
+                    <p>
+                        <span>26.01.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$560.00</p>
+                    <img src="/icons/flechita.svg" alt="flechita">
+                </div>
+            </div>
+
+            <div class="my-order-content">
+                <div class="order">
+                    <p>
+                        <span>26.01.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$560.00</p>
+                    <img src="/icons/flechita.svg" alt="flechita">
+                </div>
+            </div>
+
+            <div class="my-order-content">
+                <div class="order">
+                    <p>
+                        <span>26.01.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$560.00</p>
+                    <img src="/icons/flechita.svg" alt="flechita">
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
