--- a/my-order.html
+++ b/my-order.html
@@ -112,7 +112,7 @@
 
 <body>
     <div class="my-order">
-        <div class="my-order-contanier">
+        <div class="my-order-container">
             <h1 class="title">My order</h1>
 
             <div class="my-order-content">
